src/libs/sverilog/src/developer/sverilog.output
   0  $accept : grammar_begin $end

   1  grammar_begin :
   2                | source_text

   3  source_text : timeunits_declaration_o description_list

   4  description_list : description
   5                   | description_list description

   6  description : module_declaration

   7  module_declaration : module_ansi_header timeunits_declaration_o end_module
   8                     | module_ansi_header timeunits_declaration_o non_port_module_item_list end_module
   9                     | module_nonansi_header timeunits_declaration_o end_module
  10                     | module_nonansi_header timeunits_declaration_o module_item_list end_module

  11  module_ansi_header : attribute_instances module_keyword lifetime_o module_identifier parameter_port_list_o SEMICOLON
  12                     | attribute_instances module_keyword lifetime_o module_identifier parameter_port_list_o list_of_port_declarations SEMICOLON

  13  module_nonansi_header : attribute_instances module_keyword lifetime_o module_identifier parameter_port_list_o list_of_ports SEMICOLON

  14  module_keyword : KW_MODULE
  15                 | KW_MACROMODULE

  16  end_module : KW_ENDMODULE
  17             | KW_ENDMODULE COLON module_identifier

  18  timeunits_declaration_o :
  19                          | timeunits_declaration

  20  timeunits_declaration : KW_TIMEUNIT time_literal SEMICOLON
  21                        | KW_TIMEPRECISION time_literal SEMICOLON

  22  parameter_port_list_o :
  23                        | parameter_port_list

  24  parameter_port_list : HASH OPEN_PAREN CLOSE_PAREN
  25                      | HASH OPEN_PAREN list_of_param_assignments CLOSE_PAREN
  26                      | HASH OPEN_PAREN list_of_parameter_port_declarations CLOSE_PAREN

  27  list_of_parameter_port_declarations : parameter_port_declaration
  28                                      | list_of_parameter_port_declarations COMMA parameter_port_declaration

  29  parameter_port_declaration : parameter_declaration
  30                             | data_type list_of_param_assignments

  31  list_of_ports : OPEN_PAREN ports CLOSE_PAREN
  32                | OPEN_PAREN CLOSE_PAREN

  33  list_of_port_declarations : OPEN_PAREN port_declarations CLOSE_PAREN

  34  port_declarations : attribute_instances ansi_port_declaration
  35                    | port_declarations COMMA attribute_instances ansi_port_declaration

  36  ansi_port_declaration : net_port_header port_identifier unpacked_dimension_o

  37  port_direction : KW_INPUT
  38                 | KW_OUTPUT
  39                 | KW_INOUT
  40                 | KW_REF

  41  net_port_header : port_direction net_port_type

  42  ports : port
  43        | ports COMMA port

  44  port : port_expression
  45       | DOT port_identifier OPEN_PAREN port_expression CLOSE_PAREN

  46  port_expression : port_reference
  47                  | port_concat_start port_reference_list CLOSE_CURLBRACE

  48  port_concat_start : OPEN_CURLBRACE

  49  port_reference_list : port_reference port_reference_list COMMA port_reference

  50  port_reference : port_identifier
  51                 | port_identifier port_reference_select

  52  port_reference_select : select

  53  port_declaration : attribute_instances inout_declaration
  54                   | attribute_instances input_declaration
  55                   | attribute_instances output_declaration

  56  module_common_items : module_or_generate_item_declaration
  57                      | continuous_assign

  58  module_item_list : module_item
  59                   | module_item_list module_item

  60  module_item : port_declaration SEMICOLON
  61              | non_port_module_item

  62  module_or_generate_item : attribute_instances module_instantiation
  63                          | attribute_instances module_common_items

  64  module_or_generate_item_declaration : package_or_generate_item_declaration

  65  non_port_module_item_list : non_port_module_item
  66                            | non_port_module_item_list non_port_module_item

  67  non_port_module_item : module_or_generate_item

  68  package_or_generate_item_declaration : net_declaration
  69                                       | parameter_declaration SEMICOLON
  70                                       | SEMICOLON

  71  parameter_declaration : KW_PARAMETER data_type_or_implicit list_of_param_assignments

  72  inout_declaration : KW_INOUT net_port_type list_of_port_identifiers

  73  input_declaration : KW_INPUT net_port_type list_of_port_identifiers

  74  output_declaration : KW_OUTPUT net_port_type list_of_port_identifiers

  75  net_declaration : net_type net_strength_option data_type_or_implicit list_of_net_decl_assignments SEMICOLON

  76  net_strength_option :
  77                      | drive_strength
  78                      | charge_strength

  79  lifetime : KW_STATIC
  80           | KW_AUTOMATIC

  81  lifetime_o :
  82             | lifetime

  83  data_type : integer_vector_type signing_o packed_dimension_o
  84            | integer_atom_type signing_o

  85  data_type_or_implicit :
  86                        | signing
  87                        | packed_dimension
  88                        | signing packed_dimension

  89  integer_atom_type : KW_BYTE
  90                    | KW_SHORTINT
  91                    | KW_INT
  92                    | KW_LONGINT
  93                    | KW_INTEGER
  94                    | KW_TIME

  95  integer_vector_type : KW_BIT
  96                      | KW_LOGIC
  97                      | KW_REG

  98  net_type : KW_SUPPLY0
  99           | KW_SUPPLY1
 100           | KW_TRI
 101           | KW_TRIAND
 102           | KW_TRIOR
 103           | KW_TRIREG
 104           | KW_TRI0
 105           | KW_TRI1
 106           | KW_UWIRE
 107           | KW_WIRE
 108           | KW_WAND
 109           | KW_WOR

 110  net_port_type : data_type_or_implicit
 111                | net_type data_type_or_implicit

 112  signing_o :
 113            | signing

 114  signing : KW_SIGNED
 115          | KW_UNSIGNED

 116  drive_strength : OPEN_PAREN strength0 COMMA strength1 CLOSE_PAREN
 117                 | OPEN_PAREN strength1 COMMA strength0 CLOSE_PAREN
 118                 | OPEN_PAREN strength0 COMMA KW_HIGHZ1 CLOSE_PAREN
 119                 | OPEN_PAREN strength1 COMMA KW_HIGHZ0 CLOSE_PAREN
 120                 | OPEN_PAREN KW_HIGHZ0 COMMA strength1 CLOSE_PAREN
 121                 | OPEN_PAREN KW_HIGHZ1 COMMA strength0 CLOSE_PAREN

 122  drive_strength_o :
 123                   | drive_strength

 124  strength0 : KW_SUPPLY0
 125            | KW_STRONG0
 126            | KW_PULL0
 127            | KW_WEAK0

 128  strength1 : KW_SUPPLY1
 129            | KW_STRONG1
 130            | KW_PULL1
 131            | KW_WEAK1

 132  charge_strength : OPEN_PAREN KW_SMALL CLOSE_PAREN
 133                  | OPEN_PAREN KW_MEDIUM CLOSE_PAREN
 134                  | OPEN_PAREN KW_LARGE CLOSE_PAREN

 135  delay3 : HASH delay_value
 136         | HASH OPEN_PAREN delay_value CLOSE_PAREN
 137         | HASH OPEN_PAREN delay_value COMMA delay_value CLOSE_PAREN
 138         | HASH OPEN_PAREN delay_value COMMA delay_value COMMA delay_value CB

 139  delay3_o :
 140           | delay3

 141  delay_value : unsigned_number

 142  list_of_net_decl_assignments : net_decl_assignment
 143                               | list_of_net_decl_assignments COMMA net_decl_assignment

 144  list_of_param_assignments : param_assignment
 145                            | list_of_param_assignments param_assignment

 146  list_of_port_identifiers : unpacked_port_identifier
 147                           | list_of_port_identifiers COMMA unpacked_port_identifier

 148  unpacked_port_identifier : port_identifier
 149                           | port_identifier unpacked_dimension_list

 150  net_decl_assignment : identifier unpacked_dimension_o
 151                      | identifier unpacked_dimension_o EQ expression
 152                      | SVID
 153                      | SVID EQ expression

 154  param_assignment : parameter_identifier EQ expression

 155  unpacked_dimension : OPEN_SQ_BRACKET range CLOSE_SQ_BRACKET
 156                     | OPEN_SQ_BRACKET expression CLOSE_SQ_BRACKET

 157  unpacked_dimension_o :
 158                       | unpacked_dimension

 159  unpacked_dimension_list : unpacked_dimension
 160                          | unpacked_dimension_list unpacked_dimension

 161  packed_dimension_o :
 162                     | packed_dimension

 163  packed_dimension : OPEN_SQ_BRACKET range CLOSE_SQ_BRACKET
 164                   | unsized_dimension

 165  packed_dimension_list : packed_dimension
 166                        | packed_dimension_list packed_dimension

 167  associative_dimension : OPEN_SQ_BRACKET data_type CLOSE_SQ_BRACKET
 168                        | OPEN_SQ_BRACKET KW_ASTERISK CLOSE_SQ_BRACKET

 169  variable_dimension : unsized_dimension
 170                     | unpacked_dimension
 171                     | queue_dimension

 172  queue_dimension : OPEN_SQ_BRACKET KW_DOLLAR_SIGN CLOSE_SQ_BRACKET
 173                  | OPEN_SQ_BRACKET KW_DOLLAR_SIGN COLON expression CLOSE_SQ_BRACKET

 174  unsized_dimension : OPEN_SQ_BRACKET CLOSE_SQ_BRACKET

 175  CB : CLOSE_PAREN

 176  module_instantiation : instance_module_identifier parameter_value_assignment_o hierarchical_instance_list SEMICOLON

 177  hierarchical_instance_list : hierarchical_instance
 178                             | hierarchical_instance_list COMMA hierarchical_instance

 179  parameter_value_assignment_o :
 180                               | parameter_value_assignment

 181  parameter_value_assignment : HASH OPEN_PAREN list_of_parameter_assignments CLOSE_PAREN

 182  list_of_parameter_assignments : ordered_parameter_assignments
 183                                | named_parameter_assignments

 184  ordered_parameter_assignments : ordered_parameter_assignment
 185                                | ordered_parameter_assignments COMMA ordered_parameter_assignment

 186  named_parameter_assignments : named_parameter_assignment
 187                              | named_parameter_assignments COMMA named_parameter_assignment

 188  ordered_parameter_assignment : expression

 189  named_parameter_assignment : DOT parameter_identifier OPEN_PAREN CLOSE_PAREN
 190                             | DOT parameter_identifier OPEN_PAREN expression CLOSE_PAREN

 191  hierarchical_instance : name_of_instance OPEN_PAREN list_of_port_connections CLOSE_PAREN

 192  list_of_port_connections : ordered_port_connections
 193                           | named_port_connections

 194  name_of_instance : module_instance_identifier

 195  ordered_port_connections : ordered_port_connection
 196                           | ordered_port_connections COMMA ordered_port_connection

 197  named_port_connections : named_port_connection
 198                         | named_port_connections COMMA named_port_connection

 199  ordered_port_connection :
 200                          | expression
 201                          | list_of_attribute_instances expression

 202  named_port_connection : DOT port_identifier named_open_paren named_close_paren
 203                        | DOT port_identifier named_open_paren expression named_close_paren
 204                        | list_of_attribute_instances DOT port_identifier named_open_paren named_close_paren
 205                        | list_of_attribute_instances DOT port_identifier named_open_paren expression named_close_paren

 206  named_open_paren : OPEN_PAREN

 207  named_close_paren : CLOSE_PAREN

 208  continuous_assign : assign_keyword drive_strength_o delay3_o list_of_net_assignments SEMICOLON

 209  assign_keyword : KW_ASSIGN

 210  list_of_net_assignments : net_assignment
 211                          | list_of_net_assignments COMMA net_assignment

 212  net_assignment : net_lvalue EQ expression

 213  concatenation : OPEN_CURLBRACE expression_list CLOSE_CURLBRACE

 214  expression_list : expression
 215                  | expression_list COMMA expression

 216  multiple_concatenation : OPEN_CURLBRACE expression OPEN_CURLBRACE expression_list CLOSE_CURLBRACE CLOSE_CURLBRACE

 217  expression : primary
 218             | unary_operator attribute_instances primary
 219             | expression PLUS attribute_instances expression
 220             | expression MINUS attribute_instances expression
 221             | expression STAR attribute_instances expression
 222             | expression DIV attribute_instances expression
 223             | expression MOD attribute_instances expression
 224             | expression L_EQ attribute_instances expression
 225             | expression L_NEQ attribute_instances expression
 226             | expression C_EQ attribute_instances expression
 227             | expression C_NEQ attribute_instances expression
 228             | expression L_AND attribute_instances expression
 229             | expression L_OR attribute_instances expression
 230             | expression POW attribute_instances expression
 231             | expression LT attribute_instances expression
 232             | expression LTE attribute_instances expression
 233             | expression GT attribute_instances expression
 234             | expression GTE attribute_instances expression
 235             | expression B_AND attribute_instances expression
 236             | expression B_OR attribute_instances expression
 237             | expression B_XOR attribute_instances expression
 238             | expression B_NOR attribute_instances expression
 239             | expression B_NAND attribute_instances expression
 240             | expression B_EQU attribute_instances expression
 241             | expression LSR attribute_instances expression
 242             | expression LSL attribute_instances expression
 243             | expression ASR attribute_instances expression
 244             | expression ASL attribute_instances expression
 245             | expression TERNARY attribute_instances expression COLON expression
 246             | identifier

 247  mintypmax_expression : expression
 248                       | expression COLON expression COLON expression

 249  range : expression COLON expression

 250  part_select_range : range
 251                    | indexed_range

 252  indexed_range : expression PLUS COLON expression
 253                | expression MINUS COLON expression

 254  constant_primary : primary_literal
 255                   | concatenation

 256  primary : primary_literal
 257          | hierarchical_identifier
 258          | concatenation
 259          | multiple_concatenation
 260          | OPEN_PAREN mintypmax_expression CLOSE_PAREN
 261          | KW_THIS
 262          | KW_DOLLAR_SIGN
 263          | KW_NULL

 264  identifier_options_o : implicit_class_handle_dot
 265                       | package_scope

 266  time_literal : unsigned_number time_unit
 267               | fixed_point_number time_unit

 268  time_unit : KW_TIMEUNITS
 269            | KW_STEP

 270  implicit_class_handle_dot : KW_THIS DOT
 271                            | KW_SUPER DOT
 272                            | KW_THIS DOT KW_SUPER DOT

 273  primary_literal : number
 274                  | qstring

 275  bit_select : OPEN_SQ_BRACKET expression CLOSE_SQ_BRACKET
 276             | OPEN_SQ_BRACKET part_select_range CLOSE_SQ_BRACKET

 277  select : bit_select
 278         | select bit_select

 279  net_lvalue : ps_or_hierarchical_net_identifier

 280  unary_operator : PLUS
 281                 | MINUS
 282                 | L_NEG
 283                 | B_NEG
 284                 | B_AND
 285                 | B_NAND
 286                 | B_OR
 287                 | B_NOR
 288                 | B_XOR
 289                 | B_EQU

 290  number : integer_number
 291         | NUM_REAL

 292  integer_number : decimal_number
 293                 | OCT_VALUE
 294                 | BIN_VALUE
 295                 | HEX_VALUE

 296  decimal_number : unsigned_number
 297                 | BIN_BASE BIN_VALUE
 298                 | HEX_BASE HEX_VALUE
 299                 | OCT_BASE OCT_VALUE
 300                 | DEC_BASE UNSIGNED_NUMBER
 301                 | UNSIGNED_NUMBER BIN_BASE BIN_VALUE
 302                 | UNSIGNED_NUMBER HEX_BASE HEX_VALUE
 303                 | UNSIGNED_NUMBER OCT_BASE OCT_VALUE
 304                 | UNSIGNED_NUMBER DEC_BASE UNSIGNED_NUMBER

 305  unsigned_number : UNSIGNED_NUMBER

 306  fixed_point_number : NUM_REAL

 307  qstring : QSTRING

 308  attribute_instances :
 309                      | list_of_attribute_instances

 310  list_of_attribute_instances : attribute_instance
 311                              | list_of_attribute_instances attribute_instance

 312  attribute_instance : ATTRIBUTE_START attr_specs ATTRIBUTE_END

 313  attr_specs : attr_spec
 314             | attr_specs COMMA attr_spec

 315  attr_spec : attr_name EQ expression
 316            | attr_name

 317  attr_name : identifier

 318  hierarchical_identifier : SVID
 319                          | KW_ROOT SVID
 320                          | hierarchical_identifier_sub
 321                          | KW_ROOT hierarchical_identifier_sub

 322  hierarchical_identifier_sub : SVID DOT SVID
 323                              | hierarchical_identifier_sub DOT SVID

 324  module_instance_identifier : SVID

 325  module_identifier : identifier

 326  instance_module_identifier : identifier

 327  package_identifier : identifier COLON COLON

 328  package_scope : package_identifier
 329                | KW_UNIT COLON COLON

 330  parameter_identifier : identifier

 331  port_identifier : identifier

 332  ps_or_hierarchical_net_identifier : package_scope identifier
 333                                    | hierarchical_identifier

 334  identifier : SIMPLE_ID
 335             | ESCAPED_ID

state 0
	$accept : . grammar_begin $end  (0)
	grammar_begin : .  (1)
	timeunits_declaration_o : .  (18)

	KW_TIMEPRECISION  shift 1
	KW_TIMEUNIT  shift 2
	$end  reduce 1
	ATTRIBUTE_START  reduce 18
	KW_MACROMODULE  reduce 18
	KW_MODULE  reduce 18

	grammar_begin  goto 3
	source_text  goto 4
	timeunits_declaration_o  goto 5
	timeunits_declaration  goto 6


state 1
	timeunits_declaration : KW_TIMEPRECISION . time_literal SEMICOLON  (21)

	NUM_REAL  shift 7
	UNSIGNED_NUMBER  shift 8
	.  error

	unsigned_number  goto 9
	fixed_point_number  goto 10
	time_literal  goto 11


state 2
	timeunits_declaration : KW_TIMEUNIT . time_literal SEMICOLON  (20)

	NUM_REAL  shift 7
	UNSIGNED_NUMBER  shift 8
	.  error

	unsigned_number  goto 9
	fixed_point_number  goto 10
	time_literal  goto 12


state 3
	$accept : grammar_begin . $end  (0)

	$end  accept


state 4
	grammar_begin : source_text .  (2)

	.  reduce 2


state 5
	source_text : timeunits_declaration_o . description_list  (3)
	attribute_instances : .  (308)

	ATTRIBUTE_START  shift 13
	KW_MACROMODULE  reduce 308
	KW_MODULE  reduce 308

	module_ansi_header  goto 14
	module_nonansi_header  goto 15
	description_list  goto 16
	description  goto 17
	module_declaration  goto 18
	attribute_instances  goto 19
	list_of_attribute_instances  goto 20
	attribute_instance  goto 21


state 6
	timeunits_declaration_o : timeunits_declaration .  (19)

	.  reduce 19


state 7
	fixed_point_number : NUM_REAL .  (306)

	.  reduce 306


state 8
	unsigned_number : UNSIGNED_NUMBER .  (305)

	.  reduce 305


state 9
	time_literal : unsigned_number . time_unit  (266)

	KW_TIMEUNITS  shift 22
	KW_STEP  shift 23
	.  error

	time_unit  goto 24


state 10
	time_literal : fixed_point_number . time_unit  (267)

	KW_TIMEUNITS  shift 22
	KW_STEP  shift 23
	.  error

	time_unit  goto 25


state 11
	timeunits_declaration : KW_TIMEPRECISION time_literal . SEMICOLON  (21)

	SEMICOLON  shift 26
	.  error


state 12
	timeunits_declaration : KW_TIMEUNIT time_literal . SEMICOLON  (20)

	SEMICOLON  shift 27
	.  error


state 13
	attribute_instance : ATTRIBUTE_START . attr_specs ATTRIBUTE_END  (312)

	SIMPLE_ID  shift 28
	ESCAPED_ID  shift 29
	.  error

	identifier  goto 30
	attr_specs  goto 31
	attr_spec  goto 32
	attr_name  goto 33


state 14
	module_declaration : module_ansi_header . timeunits_declaration_o end_module  (7)
	module_declaration : module_ansi_header . timeunits_declaration_o non_port_module_item_list end_module  (8)
	timeunits_declaration_o : .  (18)

	KW_TIMEPRECISION  shift 1
	KW_TIMEUNIT  shift 2
	SEMICOLON  reduce 18
	SIMPLE_ID  reduce 18
	ESCAPED_ID  reduce 18
	ATTRIBUTE_START  reduce 18
	KW_ASSIGN  reduce 18
	KW_ENDMODULE  reduce 18
	KW_PARAMETER  reduce 18
	KW_SUPPLY0  reduce 18
	KW_SUPPLY1  reduce 18
	KW_TRI  reduce 18
	KW_TRI0  reduce 18
	KW_TRI1  reduce 18
	KW_TRIAND  reduce 18
	KW_TRIOR  reduce 18
	KW_TRIREG  reduce 18
	KW_UWIRE  reduce 18
	KW_WAND  reduce 18
	KW_WIRE  reduce 18
	KW_WOR  reduce 18

	timeunits_declaration_o  goto 34
	timeunits_declaration  goto 6


state 15
	module_declaration : module_nonansi_header . timeunits_declaration_o end_module  (9)
	module_declaration : module_nonansi_header . timeunits_declaration_o module_item_list end_module  (10)
	timeunits_declaration_o : .  (18)

	KW_TIMEPRECISION  shift 1
	KW_TIMEUNIT  shift 2
	SEMICOLON  reduce 18
	SIMPLE_ID  reduce 18
	ESCAPED_ID  reduce 18
	ATTRIBUTE_START  reduce 18
	KW_ASSIGN  reduce 18
	KW_ENDMODULE  reduce 18
	KW_INOUT  reduce 18
	KW_INPUT  reduce 18
	KW_OUTPUT  reduce 18
	KW_PARAMETER  reduce 18
	KW_SUPPLY0  reduce 18
	KW_SUPPLY1  reduce 18
	KW_TRI  reduce 18
	KW_TRI0  reduce 18
	KW_TRI1  reduce 18
	KW_TRIAND  reduce 18
	KW_TRIOR  reduce 18
	KW_TRIREG  reduce 18
	KW_UWIRE  reduce 18
	KW_WAND  reduce 18
	KW_WIRE  reduce 18
	KW_WOR  reduce 18

	timeunits_declaration_o  goto 35
	timeunits_declaration  goto 6


state 16
	source_text : timeunits_declaration_o description_list .  (3)
	description_list : description_list . description  (5)
	attribute_instances : .  (308)

	ATTRIBUTE_START  shift 13
	$end  reduce 3
	KW_MACROMODULE  reduce 308
	KW_MODULE  reduce 308

	module_ansi_header  goto 14
	module_nonansi_header  goto 15
	description  goto 36
	module_declaration  goto 18
	attribute_instances  goto 19
	list_of_attribute_instances  goto 20
	attribute_instance  goto 21


state 17
	description_list : description .  (4)

	.  reduce 4


state 18
	description : module_declaration .  (6)

	.  reduce 6


state 19
	module_ansi_header : attribute_instances . module_keyword lifetime_o module_identifier parameter_port_list_o SEMICOLON  (11)
	module_ansi_header : attribute_instances . module_keyword lifetime_o module_identifier parameter_port_list_o list_of_port_declarations SEMICOLON  (12)
	module_nonansi_header : attribute_instances . module_keyword lifetime_o module_identifier parameter_port_list_o list_of_ports SEMICOLON  (13)

	KW_MACROMODULE  shift 37
	KW_MODULE  shift 38
	.  error

	module_keyword  goto 39


state 20
	attribute_instances : list_of_attribute_instances .  (309)
	list_of_attribute_instances : list_of_attribute_instances . attribute_instance  (311)

	ATTRIBUTE_START  shift 13
	SEMICOLON  reduce 309
	OPEN_PAREN  reduce 309
	OPEN_CURLBRACE  reduce 309
	BIN_VALUE  reduce 309
	OCT_VALUE  reduce 309
	HEX_VALUE  reduce 309
	DEC_BASE  reduce 309
	BIN_BASE  reduce 309
	OCT_BASE  reduce 309
	HEX_BASE  reduce 309
	NUM_REAL  reduce 309
	UNSIGNED_NUMBER  reduce 309
	SIMPLE_ID  reduce 309
	ESCAPED_ID  reduce 309
	QSTRING  reduce 309
	PLUS  reduce 309
	MINUS  reduce 309
	L_NEG  reduce 309
	B_NEG  reduce 309
	B_AND  reduce 309
	B_OR  reduce 309
	B_XOR  reduce 309
	B_EQU  reduce 309
	B_NAND  reduce 309
	B_NOR  reduce 309
	KW_ASSIGN  reduce 309
	KW_DOLLAR_SIGN  reduce 309
	KW_INOUT  reduce 309
	KW_INPUT  reduce 309
	KW_MACROMODULE  reduce 309
	KW_MODULE  reduce 309
	KW_NULL  reduce 309
	KW_OUTPUT  reduce 309
	KW_PARAMETER  reduce 309
	KW_ROOT  reduce 309
	KW_SUPPLY0  reduce 309
	KW_SUPPLY1  reduce 309
	KW_THIS  reduce 309
	KW_TRI  reduce 309
	KW_TRI0  reduce 309
	KW_TRI1  reduce 309
	KW_TRIAND  reduce 309
	KW_TRIOR  reduce 309
	KW_TRIREG  reduce 309
	KW_UWIRE  reduce 309
	KW_WAND  reduce 309
	KW_WIRE  reduce 309
	KW_WOR  reduce 309
	KW_REF  reduce 309
	SVID  reduce 309

	attribute_instance  goto 40


state 21
	list_of_attribute_instances : attribute_instance .  (310)

	.  reduce 310


state 22
	time_unit : KW_TIMEUNITS .  (268)

	.  reduce 268


state 23
	time_unit : KW_STEP .  (269)

	.  reduce 269


state 24
	time_literal : unsigned_number time_unit .  (266)

	.  reduce 266


state 25
	time_literal : fixed_point_number time_unit .  (267)

	.  reduce 267


state 26
	timeunits_declaration : KW_TIMEPRECISION time_literal SEMICOLON .  (21)

	.  reduce 21


state 27
	timeunits_declaration : KW_TIMEUNIT time_literal SEMICOLON .  (20)

	.  reduce 20


state 28
	identifier : SIMPLE_ID .  (334)

	.  reduce 334


state 29
	identifier : ESCAPED_ID .  (335)

	.  reduce 335


state 30
	attr_name : identifier .  (317)

	.  reduce 317


state 31
	attribute_instance : ATTRIBUTE_START attr_specs . ATTRIBUTE_END  (312)
	attr_specs : attr_specs . COMMA attr_spec  (314)

	COMMA  shift 41
	ATTRIBUTE_END  shift 42
	.  error


state 32
	attr_specs : attr_spec .  (313)

	.  reduce 313


state 33
	attr_spec : attr_name . EQ expression  (315)
	attr_spec : attr_name .  (316)

	EQ  shift 43
	COMMA  reduce 316
	ATTRIBUTE_END  reduce 316


state 34
	module_declaration : module_ansi_header timeunits_declaration_o . end_module  (7)
	module_declaration : module_ansi_header timeunits_declaration_o . non_port_module_item_list end_module  (8)
	attribute_instances : .  (308)

	ATTRIBUTE_START  shift 13
	KW_ENDMODULE  shift 44
	SEMICOLON  reduce 308
	SIMPLE_ID  reduce 308
	ESCAPED_ID  reduce 308
	KW_ASSIGN  reduce 308
	KW_PARAMETER  reduce 308
	KW_SUPPLY0  reduce 308
	KW_SUPPLY1  reduce 308
	KW_TRI  reduce 308
	KW_TRI0  reduce 308
	KW_TRI1  reduce 308
	KW_TRIAND  reduce 308
	KW_TRIOR  reduce 308
	KW_TRIREG  reduce 308
	KW_UWIRE  reduce 308
	KW_WAND  reduce 308
	KW_WIRE  reduce 308
	KW_WOR  reduce 308

	end_module  goto 45
	non_port_module_item_list  goto 46
	attribute_instances  goto 47
	non_port_module_item  goto 48
	module_or_generate_item  goto 49
	list_of_attribute_instances  goto 20
	attribute_instance  goto 21


state 35
	module_declaration : module_nonansi_header timeunits_declaration_o . end_module  (9)
	module_declaration : module_nonansi_header timeunits_declaration_o . module_item_list end_module  (10)
	attribute_instances : .  (308)

	ATTRIBUTE_START  shift 13
	KW_ENDMODULE  shift 44
	SEMICOLON  reduce 308
	SIMPLE_ID  reduce 308
	ESCAPED_ID  reduce 308
	KW_ASSIGN  reduce 308
	KW_INOUT  reduce 308
	KW_INPUT  reduce 308
	KW_OUTPUT  reduce 308
	KW_PARAMETER  reduce 308
	KW_SUPPLY0  reduce 308
	KW_SUPPLY1  reduce 308
	KW_TRI  reduce 308
	KW_TRI0  reduce 308
	KW_TRI1  reduce 308
	KW_TRIAND  reduce 308
	KW_TRIOR  reduce 308
	KW_TRIREG  reduce 308
	KW_UWIRE  reduce 308
	KW_WAND  reduce 308
	KW_WIRE  reduce 308
	KW_WOR  reduce 308

	end_module  goto 50
	module_item_list  goto 51
	attribute_instances  goto 52
	port_declaration  goto 53
	module_item  goto 54
	non_port_module_item  goto 55
	module_or_generate_item  goto 49
	list_of_attribute_instances  goto 20
	attribute_instance  goto 21


state 36
	description_list : description_list description .  (5)

	.  reduce 5


state 37
	module_keyword : KW_MACROMODULE .  (15)

	.  reduce 15


state 38
	module_keyword : KW_MODULE .  (14)

	.  reduce 14


state 39
	module_ansi_header : attribute_instances module_keyword . lifetime_o module_identifier parameter_port_list_o SEMICOLON  (11)
	module_ansi_header : attribute_instances module_keyword . lifetime_o module_identifier parameter_port_list_o list_of_port_declarations SEMICOLON  (12)
	module_nonansi_header : attribute_instances module_keyword . lifetime_o module_identifier parameter_port_list_o list_of_ports SEMICOLON  (13)
	lifetime_o : .  (81)

	KW_AUTOMATIC  shift 56
	KW_STATIC  shift 57
	SIMPLE_ID  reduce 81
	ESCAPED_ID  reduce 81

	lifetime_o  goto 58
	lifetime  goto 59


state 40
	list_of_attribute_instances : list_of_attribute_instances attribute_instance .  (311)

	.  reduce 311


state 41
	attr_specs : attr_specs COMMA . attr_spec  (314)

	SIMPLE_ID  shift 28
	ESCAPED_ID  shift 29
	.  error

	identifier  goto 30
	attr_spec  goto 60
	attr_name  goto 33


state 42
	attribute_instance : ATTRIBUTE_START attr_specs ATTRIBUTE_END .  (312)

	.  reduce 312


state 43
	attr_spec : attr_name EQ . expression  (315)

	OPEN_PAREN  shift 61
	OPEN_CURLBRACE  shift 62
	BIN_VALUE  shift 63
	OCT_VALUE  shift 64
	HEX_VALUE  shift 65
	DEC_BASE  shift 66
	BIN_BASE  shift 67
	OCT_BASE  shift 68
	HEX_BASE  shift 69
	NUM_REAL  shift 70
	UNSIGNED_NUMBER  shift 71
	SIMPLE_ID  shift 28
	ESCAPED_ID  shift 29
	QSTRING  shift 72
	PLUS  shift 73
	MINUS  shift 74
	L_NEG  shift 75
	B_NEG  shift 76
	B_AND  shift 77
	B_OR  shift 78
	B_XOR  shift 79
	B_EQU  shift 80
	B_NAND  shift 81
	B_NOR  shift 82
	KW_DOLLAR_SIGN  shift 83
	KW_NULL  shift 84
	KW_ROOT  shift 85
	KW_THIS  shift 86
	SVID  shift 87
	.  error

	integer_number  goto 88
	decimal_number  goto 89
	unsigned_number  goto 90
	unary_operator  goto 91
	identifier  goto 92
	number  goto 93
	qstring  goto 94
	expression  goto 95
	primary  goto 96
	primary_literal  goto 97
	concatenation  goto 98
	multiple_concatenation  goto 99
	hierarchical_identifier  goto 100
	hierarchical_identifier_sub  goto 101


state 44
	end_module : KW_ENDMODULE .  (16)
	end_module : KW_ENDMODULE . COLON module_identifier  (17)

	COLON  shift 102
	$end  reduce 16
	ATTRIBUTE_START  reduce 16
	KW_MACROMODULE  reduce 16
	KW_MODULE  reduce 16


state 45
	module_declaration : module_ansi_header timeunits_declaration_o end_module .  (7)

	.  reduce 7


state 46
	module_declaration : module_ansi_header timeunits_declaration_o non_port_module_item_list . end_module  (8)
	non_port_module_item_list : non_port_module_item_list . non_port_module_item  (66)
	attribute_instances : .  (308)
